--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,10 @@
         <activity android:name=".ui.activity.user.areaMembers.AreaUserActivity"
                   android:screenOrientation="portrait"/>
 
+        <!--添加地址-->
+        <activity android:name=".ui.activity.user.address.CreateAddressActivity"
+                  android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
