--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,10 @@
         <activity android:name=".ui.activity.user.address.CreateAddressActivity"
                   android:screenOrientation="portrait"/>
 
+        <!--添加备注-->
+        <activity android:name=".ui.activity.confirm.RemarkActivity"
+                  android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
