--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
                   android:screenOrientation="portrait"/>
 
         <!--添加备注-->
-        <activity android:name=".ui.activity.confirm.RemarkActivity"
+        <activity android:name=".ui.activity.confirm.remark.RemarkActivity"
                   android:screenOrientation="portrait"/>
 
     </application>
