隐藏优惠券入口，完成添加备注功能，修改客工id的存储

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,10 @@
         <activity android:name=".ui.activity.confirm.remark.RemarkActivity"
                   android:screenOrientation="portrait"/>
 
+        <!--我的优惠券-->
+        <activity android:name=".ui.activity.confirm.discount.DiscountActivity"
+                  android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
